--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
+        <h1>내 생애 최고의 영화들!</h1>
         <button>영화 기록하기</button>
     </div>
     <div class="mypost">
@@ -99,7 +99,7 @@
         </div>
         <div class="mybtn">
             <button type="button" class="btn btn-dark">기록하기</button>
-            <button type="button" class="btn btn-outline-dark">닫기</button>s
+            <button type="button" class="btn btn-outline-dark">닫기</button>
         </div>
     </div>
     <div class="mycards">
